# sqltrie

./: .cruft.json  .pre-commit-config.yaml  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  MANIFEST.in  README.rst  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: release.yml  tests.yml
src/sqltrie/: .trie.py.swp  __init__.py  pygtrie.py  serialized.py  sqlite.py  trie.py
src/sqltrie/__pyinstaller/: __init__.py  hook-sqltrie.py  test_hook-sqltrie.py
src/sqltrie/sqlite/: diff.sql  init.sql  items.sql  sqlite.py  steps.sql
tests/: __init__.py  test_sqltrie.py
tests/benchmarks/: test_sqltrie.py
