[build-system]
requires = ["setuptools>=48", "setuptools_scm[toml]>=6.3.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["sqltrie"]
line_length = 88

[tool.pytest.ini_options]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["sqltrie", "tests"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if typing.TYPE_CHECKING:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "raise AssertionError",
    "@overload",
]

[tool.mypy]
# Error output
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
pretty = true
ignore_missing_imports = true
check_untyped_defs = false
# Warnings
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
files = ["src", "tests"]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.master]
load-plugins = ["pylint_pytest"]

[tool.pylint.message_control]
enable = ["c-extension-no-member", "no-else-return"]
disable = [
    "fixme",
    "missing-function-docstring", "missing-module-docstring",
    "missing-class-docstring",
]

[tool.pylint.variables]
dummy-variables-rgx = "_+$|(_[a-zA-Z0-9_]*[a-zA-Z0-9]+?$)|dummy|^ignored_|^unused_"
ignored-argument-names = "_.*|^ignored_|^unused_|args|kwargs"

[tool.codespell]
ignore-words-list = "datas"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.sqlfluff.core]
dialect = "sqlite"
exclude_rules = "L031"

[tool.sqlfluff.rules]
tab_space_size = 4
max_line_length = 80
indent_unit = "space"
allow_scalar = true
single_table_references = "consistent"
unquoted_identifiers_policy = "all"

[tool.sqlfluff.rules.L010]
capitalisation_policy = "upper"

[tool.sqlfluff.rules.L029]
# these are not reserved in sqlite,
# see https://www.sqlite.org/lang_keywords.html
ignore_words = ["name", "value", "depth"]

[tool.sqlfluff.rules.L063]
# Data Types
extended_capitalisation_policy = "upper"
