[metadata]
description = SQL-based prefix tree inspired by pygtrie and python-diskcache
name = sqltrie
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache-2.0
license_file = LICENSE
url = https://github.com/iterative/sqltrie
platforms=any
authors = DVC team
maintainer_email = support@dvc.org
keywords =
    sqlite
    sqlite3
    sql
    trie
    prefix tree
    data-science
    diskcache
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Development Status :: 1 - Planning

[options]
python_requires = >=3.8
zip_safe = False
package_dir=
    =src
packages = find:
include_package_data = True
install_requires=

[options.extras_require]
tests =
    pytest==7.2.0
    pytest-sugar==0.9.5
    pytest-cov==3.0.0
    pytest-mock==3.8.2
    pylint==2.15.0
    mypy==0.971
dev =
    %(tests)s

[options.packages.find]
exclude =
    tests
    tests.*
where=src

[flake8]
ignore=
    E203, # Whitespace before ':'
    E266, # Too many leading '#' for block comment
    W503, # Line break occurred before a binary operator
    P1,  # unindexed parameters in the str.format, see:
    # https://pypi.org/project/flake8-string-format/
max_line_length = 79
max-complexity = 15
select = B,C,E,F,W,T4,B902,T,P
show_source = true
count = true
